test/libsolidity/syntaxTests/literalSuffixes/parsing/invalid_suffix_function_pointer.sol
contract C {
    function (uint) pure suffix returns (uint) ptr;
}
// ----
// ParserError 2314: (45-52): Expected ';' but got 'returns'
